# Duckdb_Candle_Backfill

./: .gitignore  README.md  backfill_module_design_Turso.md  backfill_module_design_duckdb.md  create_turso_epub.py  pyproject.toml
openspec/changes/add-duckdb-backfill-foundation/: tasks.md
openspec/changes/add-duckdb-backfill-scope-storage-foundation/: design.md  proposal.md  tasks.md
openspec/changes/add-duckdb-backfill-scope-storage-foundation/specs/duckdb-backfill-foundation/: spec.md
openspec/changes/add-simulated-provider-one-shot-ingestion/: design.md  proposal.md  tasks.md
openspec/changes/add-simulated-provider-one-shot-ingestion/specs/duckdb-backfill-foundation/: spec.md
openspec/changes/archive/2026-06-18-add-duckdb-backfill-foundation/: design.md  proposal.md
openspec/changes/archive/2026-06-18-add-duckdb-backfill-foundation/specs/duckdb-backfill-foundation/: spec.md
openspec/specs/duckdb-backfill-foundation/: spec.md
src/duckdb_candle_backfill/: __init__.py  config.py  models.py  storage_duckdb.py
src/duckdb_candle_backfill/sql/: duckdb_schema.sql
tests/: test_storage_duckdb.py
